Fix issues with password reset (#1744)

--- a/app/views/users/request_password_reset_form.html.haml
+++ b/app/views/users/request_password_reset_form.html.haml
@@ -2,7 +2,7 @@
   %h3= t(".reset_your_password")
   %p= t(".enter_the_email_address")
 
-  = form_tag '/users/password_reset', method: 'post' do
+  = form_tag "/users/send_password_reset_email", method: :post do
     .form-group
       %input{ name: 'email', id: 'email', type: 'text', placeholder: t(".your_email_address"), class: 'form-control' }
     %input{ type: 'submit', value: t(".reset_your_password"), class: 'btn btn-primary btn-lg' }
