better time display

--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -106,7 +106,7 @@
                   %td= t(".creator")
                   %td
                     = @bike.creator&.display_name
-                    %em.small.less-strong
+                    %em.less-strong
                       = origin_display(@bike.creation_description)
                 - passive_organization.additional_registration_fields.each do |reg_field|
                   - bike_attr = OrganizationFeature.reg_field_bike_attrs[reg_field.to_sym]
