--- a/app/views/admin/tweets/edit.html.haml
+++ b/app/views/admin/tweets/edit.html.haml
@@ -80,7 +80,7 @@
 - if @tweet.retweets.any?
   %hr
   %h3 Retweets
-  = render "admin/tweets/tweets", tweets: @tweet.retweets
+  = render partial: "admin/tweets/table", locals: { tweets: @tweet.retweets }
 
 %hr
 
