--- a/app/views/admin/impound_records/index.html.haml
+++ b/app/views/admin/impound_records/index.html.haml
@@ -38,7 +38,7 @@
 = paginate @impound_records, views_prefix: "admin"
 
 
-%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable
+%table.table.table-striped.table-bordered.table-sm.without-exterior-border#recordsTable
   %thead.small-header.hidden-md-down
     %th
       = sortable "created_at"
@@ -68,7 +68,8 @@
             = l(impound_record.updated_at, format: :convert_time)
         - unless current_organization.present?
           %td
-            = link_to impound_record.organization&.short_name, admin_impound_records_path(sortable_search_params.merge(organization_id: impound_record.organization_id))
+            - if impound_record.organization_id.present?
+              = link_to impound_record.organization&.short_name || impound_record.organization_id, admin_impound_records_path(sortable_search_params.merge(organization_id: impound_record.organization_id))
         %td
           %small
             = impound_record.location&.name
