--- a/app/views/admin/tweets/_table.html.haml
+++ b/app/views/admin/tweets/_table.html.haml
@@ -1,6 +1,7 @@
 - tweets ||= @tweets
 - render_sortable ||= false
 - skip_twitter_account ||= false
+- skip_kind ||= false
 
 .full-screen-table
   %table.table.table-striped.table-bordered.table-sm
@@ -18,6 +19,12 @@
             = sortable "twitter_account_id"
           - else
             Twitter Account
+      - unless skip_kind
+        %th
+          - if render_sortable
+            = sortable "kind"
+          - else
+            Kind
       %th
         Tweet
       %th
@@ -38,14 +45,20 @@
           - unless skip_twitter_account
             %td
               - if tweet.twitter_account.present?
-                = link_to tweet.twitter_account.screen_name, admin_twitter_account_path(tweet.twitter_account)
+                = link_to tweet.twitter_account.screen_name, admin_tweets_path(search_twitter_account_id: tweet.twitter_account.to_param)
               - else
                 = tweet.tweetor
+          - unless skip_kind
+            %td
+              = tweet.kind&.gsub(/_?tweet/, "")&.humanize
           %td
             = strip_tags(tweet.body_html)
           %td
-            %small.less-strong
-              = link_to tweet.stolen_record.id, admin_stolen_bike_path(tweet.stolen_record) if tweet.stolen_record.present?
+            - if tweet.stolen_tweet?
+              %small.less-strong
+                - link_text = tweet.bike.title_string if tweet.bike.present?
+                - link_text ||= tweet.stolen_record.id
+                = link_to link_text, admin_stolen_bike_path(tweet.stolen_record_id, stolen_record_id: true) if tweet.stolen_record.present?
           %td
             = check_mark if tweet.image.present?
           %td
