--- a/app/views/admin/tweets/index.html.haml
+++ b/app/views/admin/tweets/index.html.haml
@@ -5,11 +5,11 @@
   .col-md-9
     %ul
       %li.nav-item
-        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_kind == "all" ? "active" : "") }
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_kind == "all" ? "" : "active") }
           -# Not all search_kinds include tweets, so make it consistent
           #{@search_kind.gsub(/_?tweet/, "").humanize} tweets
         .dropdown-menu
-          - (%w[all not_stolen] + Tweet.kinds).each do |kind|
+          - permitted_search_kinds.each do |kind|
             - kind_active = @search_kind == kind
             = link_to "#{kind.gsub(/_?tweet/, "").humanize} tweets", admin_tweets_path(sortable_search_params.merge(search_kind: (kind_active ? nil : kind))), class: "dropdown-item #{kind_active ? 'active' : ''}"
             - if kind == "not_stolen"
@@ -22,7 +22,7 @@
   = render partial: "/shared/admin_current_header", locals: { viewing: "Tweets" }
 
 .row.mt-4.mb-4
-  .col-sm-6
+  .col-sm-5
     = number_with_delimiter(matching_tweets.count)
     matching tweets
     %em
@@ -30,11 +30,23 @@
     - if @twitter_account.present?
       %strong
         from
-        = link_to twitter_account.screen_name, admin_twitter_account_path(@twitter_account)
-
+        = link_to @twitter_account.screen_name, admin_twitter_account_path(@twitter_account)
+  .col-md-7
+    = form_tag admin_tweets_path, method: :get, class: "form-inline" do
+      = hidden_field_tag :sort, sort_column
+      = hidden_field_tag :sort_direction, sort_direction
+      = hidden_field_tag :period, params[:period]
+      = hidden_field_tag :end_time, params[:end_time]
+      = hidden_field_tag :start_time, params[:start_time]
+      = hidden_field_tag :search_twitter_account_id, params[:search_twitter_account_id]
+      = hidden_field_tag :search_kind, params[:search_kind]
+      = hidden_field_tag :organization_id, params[:organization_id]
+      .form-group.ml-auto.mr-2.mb-2
+        = text_field_tag :query, params[:query], placeholder: "Search tweets", class: "form-control"
+      = submit_tag "Search", name: "search", class: "btn btn-primary mb-2"
 - if @render_chart
   = column_chart time_range_counts(collection: matching_tweets), stacked: true, thousands: ",", defer: true
 
 = paginate @tweets, views_prefix: "admin"
 
-= render partial: "/admin/tweets/table", locals: { tweets: @tweets, render_sortable: true, skip_twitter_account: @twitter_account.present? }
+= render partial: "/admin/tweets/table", locals: { tweets: @tweets, render_sortable: true, skip_twitter_account: @twitter_account.present?, skip_kind: @search_kind != "all" }
