--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -37,6 +37,9 @@
     = form_tag admin_users_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort, sort_column
       = hidden_field_tag :sort_direction, sort_direction
+      = hidden_field_tag :period, params[:period]
+      = hidden_field_tag :end_time, params[:end_time]
+      = hidden_field_tag :start_time, params[:start_time]
       = hidden_field_tag :search_ambassadors, params[:search_ambassadors]
       = hidden_field_tag :search_superusers, params[:search_superusers]
       = hidden_field_tag :organization_id, params[:organization_id]
