--- a/app/views/admin/recovery_displays/_form.html.haml
+++ b/app/views/admin/recovery_displays/_form.html.haml
@@ -59,7 +59,7 @@
       .form-group
         = f.label :body
         = f.text_area :quote, placeholder: 'Quote about recovery', rows: 4, class: "form-control", id: "characterCounter"
-      %p.text-info.text-right{ style: "margin-top: -10px; font-size: 150%;" }
+      %p.text-info.text-right{ style: "margin-top: -1rem; font-size: 150%;" }
         %span#characterTotal
 
     .col-lg-6
