--- a/app/views/admin/tweets/new.html.haml
+++ b/app/views/admin/tweets/new.html.haml
@@ -36,8 +36,11 @@
                 %small.less-strong
                   Make sure the text is under the character count
               = f.text_area :body, rows: 4, class: "form-control"
+              :javascript
+                window.maxCharacterCount = #{TwitterTweeterIntegration::TWEET_LENGTH};
               %p.text-info.text-right{ style: "margin-top: -0.4rem; font-size: 150%;" }
                 %span#characterTotal
+
         .mt-2
           = f.submit 'Send tweet!', class: 'btn btn-success'
 
