admin tweet cleanup

--- a/app/views/admin/tweets/_display.html.haml
+++ b/app/views/admin/tweets/_display.html.haml
@@ -17,6 +17,14 @@
         %td
           %span.convertTime
             = l @tweet.created_at, format: :convert_time
+      - if @tweet.stolen_record_id.present?
+        %tr
+          %td
+            Bike
+          %td
+            - link_text = @tweet.bike.title_string if @tweet.bike.present?
+            - link_text ||= @tweet.stolen_record.id
+            = link_to link_text, admin_stolen_bike_path(@tweet.stolen_record_id, stolen_record_id: true) if @tweet.stolen_record.present?
   .col-md-6
     %table.table-list
       %tr
@@ -44,7 +52,7 @@
 
 - if @tweet.retweets.any?
   %h3.mt-4 Retweets
-  = render partial: "admin/tweets/table", locals: { tweets: @tweet.retweets }
+  = render partial: "admin/tweets/table", locals: { tweets: @tweet.retweets, skip_retweets: true }
 
 %hr.mt-4
 
