add feedback kind

--- a/app/views/admin/feedbacks/show.html.haml
+++ b/app/views/admin/feedbacks/show.html.haml
@@ -16,7 +16,7 @@
           %td
             Type
           %td
-            = link_to @feedback.humanized_type, admin_feedbacks_path(search_type: @feedback.feedback_type)
+            = link_to @feedback.humanized_type, admin_feedbacks_path(search_kind: @feedback.kind)
         %tr
           %td
             Title
