--- a/app/views/admin/feedbacks/index.html.haml
+++ b/app/views/admin/feedbacks/index.html.haml
@@ -11,16 +11,15 @@
           - else
             = Feedback.humanized_kind(@search_kind)
         .dropdown-menu
-          - (["all"] + Feedback.kinds).each do |kind|
+          - permitted_kinds.each do |kind|
             - kind_active = @search_kind == kind
             - kind_display = "All kinds" if kind == "all"
             - kind_display ||= Feedback.humanized_kind(kind)
             = link_to kind_display, admin_feedbacks_path(sortable_search_params.merge(search_kind: (kind_active ? nil : kind))), class: "dropdown-item #{kind_active ? 'active' : ''}"
-            - if kind == "all"
+            - if kind == "stolen_tip"
               .dropdown-divider
-      - if @search_kind == "all"
-        %li.nav-item
-          = link_to "Render type counts", admin_feedbacks_path(sortable_search_params.merge(search_feedback_type_counts: !@render_type_counts)), class: "nav-link btn btn-sm btn-outline-secondary #{@render_type_counts ? 'active' : ''}"
+      %li.nav-item
+        = link_to "Render type counts", admin_feedbacks_path(sortable_search_params.merge(search_feedback_type_counts: !@render_type_counts)), class: "nav-link btn btn-sm btn-outline-secondary #{@render_type_counts ? 'active' : ''}"
 
 .col-12.mt-4
   = column_chart time_range_counts(collection: available_feedbacks), stacked: true, thousands: ",", defer: true
@@ -28,9 +27,9 @@
 = render partial: "/shared/period_select"
 
 - if @render_type_counts
-  .row.mt-2
+  .row.mt-4.mb-4
     .col-md-6.offset-md-3
-      .card.bg-light
+      .card
         .card-body
           %h3 Kinds
           %table.table-list.wide-definition
